test_suite5/ALAN/test_suite/alan-2022-examples/failing/001620_mutation.alan
source GNz7a begin call R39(440 function w() begin relax end) end
